gccida/c0/try_tablejump
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_tablejump/src/expr.c:11088:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_tablejump/src/expr.c:11096:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *index_expra; // [rsp+50h] [rbp-10h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_tablejump/src/expr.c:11110:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)mode, 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_tablejump/src/expr.c:11111:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)oldmode, 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_tablejump/src/expr.c:11114:25: error: use of undeclared identifier 'machine_mode'
do_tablejump( indexa, ( machine_mode)mode, v9, table_label, default_label); 
                        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/try_tablejump/src/obj/expr.o] Error 1
